<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Black Button</string>
    <string name="link" translatable="false">link</string>
    <string name="select_server" translatable="false">Server</string>
    <string name="connect" translatable="false">Connect</string>
    <string name="contact_us" translatable="false">Contact us</string>
    <string name="privacy_agreement" translatable="false">Privacy agreement</string>
    <string name="share" translatable="false">Share</string>
    <string name="exit_procedure" translatable="false">Press again to exit the program</string>
    <string name="no_mail_app_tips" translatable="false">Contact us by email</string>

    <string name="select_mail_tips" translatable="false">select mail tips</string>
    <string name="on" translatable="false">ON</string>
    <string name="off" translatable="false">OFF</string>
    <string name="connected_failed" translatable="false">Connected Failed</string>
    <string name="insufficient_permissions" translatable="false">Insufficient permissions</string>
    <string name="connected_succeeded" translatable="false">Connected succeeded</string>
    <string name="disconnected_succeeded" translatable="false">Disconnected succeeded</string>
    <string name="disconnect_tips" translatable="false">Please disconnect the previous link</string>
    <string name="network_tips" translatable="false">The current device has no network</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="_00_00_00">00:00:00</string>
</resources>