<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/bg_nav" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="115dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_nav_log" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp16"
                    android:src="@mipmap/ic_black_button" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout1"
                android:layout_marginStart="@dimen/dp42"
                android:layout_marginTop="58dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp12"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp13"
                    android:paddingBottom="@dimen/dp13"
                    android:text="@string/contact_us"
                    android:textColor="#FF9D734D"
                    android:textSize="14sp"
                    app:drawableStartCompat="@mipmap/ic_email" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp9"
                    android:layout_marginBottom="@dimen/dp9"
                    android:drawablePadding="@dimen/dp12"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp13"
                    android:paddingBottom="@dimen/dp13"
                    android:text="@string/privacy_agreement"
                    android:textColor="#FF9D734D"
                    android:textSize="14sp"
                    app:drawableStartCompat="@mipmap/ic_agreement" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dp12"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp13"
                    android:paddingBottom="@dimen/dp13"
                    android:text="@string/share"
                    android:textColor="#FF9D734D"
                    android:textSize="14sp"
                    app:drawableStartCompat="@mipmap/ic_share" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>