<?xml version="1.0" encoding="utf-8"?>
<com.demo.blackbutton.widget.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slidingMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:rightMargin="92dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <include
            android:id="@+id/la_home_menu"
            layout="@layout/layout_home_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main"
            android:orientation="vertical">

            <include
                android:id="@+id/main_title"
                layout="@layout/layout_toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:textColor="#FF161616"
                    android:textSize="30sp"
                    android:text="@string/_00_00_00"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/unitedkingdom" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp8"
                        android:text="United States - London"
                        android:textColor="#FF9D734D"
                        android:textSize="11sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_switch"
                    android:layout_width="match_parent"
                    android:layout_height="259dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp8"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/img_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_fileName="data.json"
                        app:lottie_imageAssetsFolder="images"
                        app:lottie_loop="true" />

                    <TextView
                        android:id="@+id/txt_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/img_switch"
                        app:layout_constraintTop_toTopOf="@+id/img_switch" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp18"
                    android:background="@drawable/radio_group_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/radio_button0"
                        style="@style/radio_group_false"
                        android:text="@string/on" />

                    <TextView
                        android:id="@+id/radio_button1"
                        style="@style/radio_group_true"
                        android:text="@string/off" />

                </LinearLayout>


            </LinearLayout>

<!--            <FrameLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="212dp"-->
<!--                android:layout_margin="@dimen/dp20"-->
<!--                android:background="@drawable/bg_main_ad"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/timer"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent">-->

<!--                <FrameLayout-->
<!--                    android:id="@+id/ad_frame"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" />-->

<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@mipmap/ic_placeholder"-->
<!--                    android:visibility="gone" />-->
<!--            </FrameLayout>-->


        </LinearLayout>
    </LinearLayout>


</com.demo.blackbutton.widget.SlidingMenu>